# dash-interact

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
examples/: capture_demo.py  corpframe_demo.py  gallery_demo.py  interact.py  interact_demo.py  page_explicit.py  page_implicit.py  page_jupyter.ipynb  showcase.py
examples/dash/: mpl_export.py
r-packages/corpframe/R/: frame_png.R  ggplot.R  python.R  shiny.R
src/dash_fn_interact/: __init__.py  _config_builder.py  _field_components.py  _forms.py  _interact.py  _renderers.py  _spec.py  fn_interact.py  page.py
src/dash_fn_tools/: _config_builder.py
src/dash_interact/: __init__.py  _page_manager.py  interact.py  page.py
src/s5ndt/: __init__.py  config_builder.py  mpl_export.py  wizard.py
tests/: conftest.py  test_smoke.py
tests/dash_capture/: test_strategies.py
tests/dash_corpframe/: test_corporate_frame.py
tests/dash_fn_interact/: test_fn_interact.py  test_forms.py  test_renderers.py
tests/dash_interact/: test_auto_slider.py  test_interact.py  test_options.py  test_page.py
