[project]
name = "dash-interact"
dynamic = ["version"]
description = "pyplot-style convenience layer for Plotly Dash — build interactive apps top-to-bottom with no boilerplate."
keywords = ["plotly", "dash", "visualization", "dashboard", "interact"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "dash-fn-form",
]

[project.urls]
Homepage = "https://github.com/saemeon/dash-interact"
Repository = "https://github.com/saemeon/dash-interact"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = ["ruff", "prek", "ty", { include-group = "test" }, { include-group = "doc" }]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/dash_interact/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = { attr = "dash_interact._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dash_interact = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PERF"]
ignore = ["E203", "E501", "C408"]

[tool.ruff.lint.per-file-ignores]
"examples/**/scripts/*.py" = ["E402"]

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/dash_interact --cov-report=term-missing"
